@@ -239,7 +239,7 @@ UninitPlanetInfo (void)
 void
 GetPlanetInfo (void)
 {
-	void *fp;
+	GAME_STATE_FILE *fp;
 
 	pSolarSysState->SysInfo.PlanetInfo.ScanRetrieveMask[BIOLOGICAL_SCAN] = 0;
 	pSolarSysState->SysInfo.PlanetInfo.ScanRetrieveMask[MINERAL_SCAN] = 0;
@@ -287,7 +287,7 @@ GetPlanetInfo (void)
 void
 PutPlanetInfo (void)
 {
-	void *fp;
+	GAME_STATE_FILE *fp;
 
 	fp = OpenStateFile (STARINFO_FILE, "r+b");
 	if (fp)
